Changelog

vmcaster-0.0.26

 * New command line option '--imagelist-list-endorser'

vmcaster-0.0.25

 * New command line option '--imagelist-list-image'

vmcaster-0.0.24

 * Added nosetest unit test framework.
 * changed to distutils as default setup.py framework.
 * Improved documentation.

vmcaster-0.0.23

 * Added more warnings with badly picked 'uriMatch' values.
 * Added some debug level logging to upload paths to help debug badly picked 
   'uriMatch' values.
 * Fixed bug in uploader facard.
 * Fixed stack trace casuing logging of errors.
 * Documentation Additions.
 * Documentation spelling fixes.
 * Appdb upload improvements from Marios Chatziangelou
    Enviroment variable to set authorisation mode VMCASTER_EGIAPPDB_AUTHN with default as x509
 * Spelling errors to documentation
 * Documentation improvements.
 * Better error handling for the configuration of keys.
 * documentation on egiappdb configurations.

vmcaster-0.0.22

 * Added flags to vmcaster command line.
 * Pass flags to each implementation of image(list) uploader.
 * Improved handling on invalid imagelist.
 * Only increment version on successful image list update.
 * Only set creation/expiry date on successful image list update.
 * Removed some duplicate code
 * Refactor AppDB code to support multiple actions.
 * Improve presentation of AppDb output as error code and error text.

vmcaster-0.0.21

 * x509: Now reads the Certificates x509 extensions.
 * x509: Added check for presences of extension type 'keyUsage'
 * x509: Add check that 'Digital Signature' is in the array of acceptable usages.
 * Reorganisation for more uploaders.
 * Added egiappdb protocol so suporting the App Db. 
 * Added short options for '--quiet' logging, '-q'.
 * Added short options for '--verbose' logging, '-v'.
 * Auto Guess the first version number for all images if none set.
 * Documentation update.
 * Improved logging identifying 'special' metadata including "hv:dn", from endorser,